--- a/raspberryPiMidiPlaying/Makefile
+++ b/raspberryPiMidiPlaying/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -g -Wall -std=c99 -fopenmp -mavx -mfma -pthread
+CFLAGS = -g -Wall -std=c99 -fopenmp -pthread
 LDFLAGS = -fopenmp
 CUNIT = -L/home/ff/cs61c/cunit/install/lib -I/home/ff/cs61c/cunit/install/include -lcunit
 PYTHON = -I/usr/include/python3.6 -lpython3.6m
